src/test/ui/suggestions/into-str.stderr
error[E0277]: the trait bound `String: Into<&str>` is not satisfied
  --> $DIR/into-str.rs:4:9
   |
LL |     foo(String::new());
   |     --- ^^^^^^^^^^^^^ the trait `Into<&str>` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/into-str.rs:1:31
   |
LL | fn foo<'a, T>(_t: T) where T: Into<&'a str> {}
   |                               ^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
